# devops-container-terraform-test

./: .dockerignore  .gitignore  Dockerfile  Makefile  readme.md
app/: pyproject.toml
github/workflow/: aws.yml
terraform/: main.tf  variables.tf
terraform/infrastructure/modules/aws/lb/standard/: data.tf  locals.tf  main.tf
terraform/infrastructure/modules/aws/lookups/security_groups/: data.tf  outputs.tf  variables.tf
terraform/infrastructure/modules/aws/vpc/security_groups/: groups.tf  locals.tf  variables.tf
