[tool.poetry]
name = "devops-container-terraform-test"
version = "0.1.0"
description="Containerised a hello word example that is developed under one of the most popular asynchronous python framework - FastAPI"
authors = ["Roman Zhidkov <arist0.rr@gmail.com>"]

[tool.poetry.dependencies]
docker = "^4.2.0"
fastapi = "^0.54.1"
gunicorn = "^20.0.4"
uvicorn = "^0.11.3"
python-multipart = "^0.0.5"
requests = "^2.23.0"
tenacity = "^6.1.0"
jinja2 = "^2.11.2"
pydantic = "^1.4"
python = "^3.8.10"
pytest = "^5.4.1"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
raven = "^6.10.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.770"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
